Website/SourceCode/Profiles/Profiles/Search/CSS/UCSF.css
.searchForm td div.header { color: #CA7C29; font-size: 30px; font-weight: bold; margin: 16px 0 8px; }
.searchForm #div1 { border-top: none; margin-top: 20px; padding-top: 12px; padding-top: 20px\9; margin-top: 0\9; } 
.searchForm #div1 th { font-weight: normal; width: 140px; }
#searchOptions { margin-top: -36px; margin-bottom: 25px; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_searchfor,
#txtSearchFor { padding-left: 2px; height: 30px; height: 22px\9; padding-top: 6px\9; }
.listTable th { border: 1px solid #CCC !important; }
#tblSearchResults th { text-align: left; }
#suckerfishmenu li.item-home a { background-color: #6A7D7D !important; }
/* we didn't use this filters display
#filtersContainer { width: 680px; }
#filtersContainer #filters { display: inline-block; width: 580px; margin-bottom: 5px; white-space: nowrap; }
#filtersContainer #filters ul { display: inline; padding-left: 15px; margin: 0; }
#filtersContainer #filters ul li { display: inline; list-style-type: none; }
*/
#filters ul li strong { font-size: 150%; line-height: 20px; }
.connectionContainerTable { background-color: #F0F4F6; height: 60px; border-color: #CCC; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvConnectionDetails th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvIndirectConnectionDetails th { text-align: left; padding-left: 6px; }
image { border: none; }
.profiles .profilesContentMain .pageTabs { padding-left: 345px; 
  background-image: url('../../Framework/Images/tab_back.gif'); }
.panelActive { margin-top: 29px; margin-top: 35px\9; }
.profiles .profilesContentPassive { margin-top: 38px; margin-top: 35px\9; } 

.unused,
input#chkExactphrase, input#institutionallexcept, input#departmentallexcept { display: none; }
.searchForm .inputText { width: 249px; width: 245px\9; }
#divChkList { border: 1px solid #CCC !important; margin-top: -5px; width: 248px !important; 
  height: 190px !important; padding-top: 15px !important; }
#divOtherOptions { 
  border-right: 1px solid #CCC !important;
  border-bottom: 1px solid #CCC !important;
  border-left: 1px solid #CCC !important;
}
#why { width:190px; font-size:11px; padding:1px; text-align:center; background-color:#F2F7F7; margin-left:30px }
 
/* #andor { width: 100%; height: 3px\9; margin-top: -25px; } */
#andor span { display: inline-block; position: relative; left: 150px; top: -25px;
  width: 46px; height: 15px; margin-bottom: -15px;
  color: #666; background-color: #EEE; padding: 0 0 0 6px; font-size: 11px; letter-spacing: 2px; }

